app/assets/stylesheets/forms.css.sass
@mixin clearfix-vertical-flow
  border-bottom: 1px solid transparent

%field-spacing
  margin: 1em 0

.validation-summary,
.validation-error
  padding: 1em
  border: 3px solid #df3034
  background: lighten(#df3034, 40%)

.validation-summary
  margin-top: 1em

form .validation-summary
  margin: 0 0 1em
  & :first-child
    margin-top: 0
  & :last-child
    margin-bottom: 0
  &.alert-dialog
    margin-top: 1em

.validation-error
  border-width: 0 0 0 3px

.validation-message
  display: block
  color: #df3034


form
  @include clearfix-vertical-flow

  .form-hint
    @include core-16
    color: $grey-1
    margin: 0
    @include media(mobile)
      color: $black
  
  .panel-indent
    @extend %field-spacing

  .group
    @extend %field-spacing

    .panel-indent
      float: left

    fieldset
      margin: 0
    
    legend
      @include copy-19
      margin: 0
      padding: 0 !important

    .form-group-day,
    .form-group-month,
    .form-group-year
      float: left
      margin-right: 20px
      clear: none
      width: 50px

      label,
      input
        display: block
        width: 100%
    
    .form-group-year
      width: 70px
  
  .group--inline
    label
      float: left
      width: 12.5em
  

label
  @include core-19
  display: block

@mixin input
  width: 250px
  padding: 5px 4px 2px
  color: $black
  background: $white
  border: 1px solid $grey-2

input,
select
  @include core-19

  &[type=text],
  &[type=email],
  &[type=tel],
  &[type=date],
  &[type=number]
    @include input

    @include media(mobile)
      width: 96%

    @include media(tablet)
      width: 250px

select
  @include input
  width: auto

.button
  width: auto
  @include core-19

.actions
  margin: 1em 0
  padding-top: 1em

  @include media(desktop)
    clear: both

  p
    margin-top: .263em
    text-align: right

    @include media(false, 768px)
      margin-top: 2em
      text-align: left

.primary-actions
  float: left

  @include media(false, 768px)
    float: none

  @include ie(6)
    float: none


// Hide number spinners
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button
  -webkit-appearance: none
  margin: 0

input[type=number]
  -moz-appearance: textfield

